# proyecto-final-2026-1

./: CMakeLists.txt  README.md
docs/: .gitignore  Creación de vistas y login.md  Creación de vistas.md  Diseño e Integración del Nivel 2.md  El proyecto final UdeA - Informática 2.md  Implementacion del diagrama UML.md  Logica del juego.md  Lógica del juego.md  README.md
docs/.obsidian/: community-plugins.json
docs/formalizacion/: index.md
docs/momento-1/: momento-uno-update.md  momento-uno.md
docs/momento-2/: momento-2-with-qt.md  momento-dos.md
golf-cronos/: CMakeLists.txt  main.cpp  recursos.qrc
golf-cronos/src/cerebro/: gestorbasedatos.cpp  gestorbasedatos.h
golf-cronos/src/escenario/pantallas/: iniciowindow.cpp  iniciowindow.h  iniciowindow.ui
momento-1/: momento-uno-update.md  momento-uno.md
momento-2/: momento-dos.md
src/: recursos.qrc
src/cerebro/: elementojuego.cpp  elementojuego.h  gestorbasedatos.cpp  gestorbasedatos.h
src/escenario/juego/: nivel.cpp  nivel.h
src/escenario/juego/items/: pelota.cpp  pelota.h
src/escenario/modos_juego/: juegomododosqgraphicsview.cpp  juegomododosqgraphicsview.h  juegomodounoqgraphicsview.cpp  juegomodounoqgraphicsview.h  juegomodounowidget.cpp  juegomodounowidget.h
src/escenario/pantallas/: iniciowindow.cpp  iniciowindow.h  iniciowindow.ui
src/escenario/widgets/: juegomoddoswidget.ui  juegomodunowidget.cpp  juegomodunowidget.h  juegomodunowidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  modosgamewidget.cpp  modosgamewidget.h  modosgamewidget.ui  portadawidget.cpp  portadawidget.h  portadawidget.ui  registrarsewidget.cpp  registrarsewidget.h  registrarsewidget.ui
src/resources/qss/: estilos.qss
